[metadata]
name = flake8_vedro_mocks
version = 1.0.0

[options.entry_points]
flake8.extension =
    MCS=flake8_vedro_mocks.plugins:VedroMocksPlugin

[flake8]
max_line_length = 119
exclude = .git, .venv, venv, _files
per_file_ignores =
    _files/scenarios/wrong_scenario.py:F821
    __init__.py:F401
ignore = W503

# flake8-vedro-mocks params
is_mock_assert_optional = true
mock_name_pattern = (?=.*mock)(?!.*grpc)


[mypy]
exclude = venv, .gitignore, _files
ignore_missing_imports = true
